--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "folder-tree",
+  "name": "react-simple-folder-tree",
+  "description": "A Simple React Folder Tree",
+  "author": "Mohammad Nazari",
+  "license": "MIT",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -24,5 +27,13 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0"
+  },
+  "main": "./dist/react-simple-folder-tree.umd.js",
+  "module": "./dist/react-simple-folder-tree.es.js",
+  "exports": {
+    ".": {
+      "import": "./dist/react-simple-folder-tree.es.js",
+      "require": "./dist/react-simple-folder-tree.umd.js"
+    }
   }
 }
