--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@stefanracic/tailwind-child": "^1.0.5",
+    "@types/node": "^20.10.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
@@ -35,7 +36,8 @@
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.0",
     "typescript": "^4.9.3",
-    "vite": "^4.2.0"
+    "vite": "^4.2.0",
+    "vite-plugin-dts": "^3.7.0"
   },
   "main": "./dist/react-simple-folder-tree.umd.js",
   "module": "./dist/react-simple-folder-tree.es.js",
@@ -44,5 +46,9 @@
       "import": "./dist/react-simple-folder-tree.es.js",
       "require": "./dist/react-simple-folder-tree.umd.js"
     }
-  }
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/nazari2079"
+  },
+  "homepage": "https://github.com/nazari2079/react-simple-folder-tree#readme"
 }
