--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@testing-library/dom": "^9.3.3",
     "@testing-library/react": "^14.1.2",
+    "@types/react-test-renderer": "^18.0.7",
     "c8": "^8.0.1",
     "classnames": "^2.3.2",
     "eslint": "^8.56.0",
