change package private to false

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "A Simple React Folder Tree",
   "author": "Mohammad Nazari",
   "license": "MIT",
-  "private": true,
+  "private": false,
   "version": "1.0.0",
   "type": "module",
   "scripts": {
