add github username to package name

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-simple-folder-tree",
+  "name": "@nazari2079/react-simple-folder-tree",
   "description": "A Simple React Folder Tree",
   "author": "Mohammad Nazari",
   "license": "MIT",
