--- a/package.json
+++ b/package.json
@@ -13,19 +13,10 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "@testing-library/dom": "^9.3.3",
-    "@testing-library/react": "^14.1.2",
-    "@types/react-test-renderer": "^18.0.7",
-    "c8": "^8.0.1",
     "classnames": "^2.3.2",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
     "iconsax-react": "^0.0.8",
-    "jsdom": "^23.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-test-renderer": "^18.2.0",
-    "vitest": "^1.1.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@stefanracic/tailwind-child": "^1.0.5",
@@ -38,14 +29,25 @@
     "tailwindcss": "^3.3.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
-    "vite-plugin-dts": "^3.7.0"
+    "vite-plugin-dts": "^3.7.0",
+    "vite-plugin-lib-inject-css": "^1.3.0",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/react": "^14.1.2",
+    "@types/react-test-renderer": "^18.0.7",
+    "c8": "^8.0.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
+    "react-test-renderer": "^18.2.0",
+    "vitest": "^1.1.0",
+    "jsdom": "^23.0.1"
   },
   "main": "dist/react-simple-folder-tree.umd.js",
   "module": "dist/react-simple-folder-tree.es.js",
+  "types": "dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/react-simple-folder-tree.es.js",
-      "require": "./dist/react-simple-folder-tree.umd.js"
+      "import": "./dist/index.es.js",
+      "require": "./dist/index.umd.js"
     }
   },
   "files": [
