--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Mohammad Nazari",
   "license": "MIT",
   "private": false,
-  "version": "1.0.2",
+  "version": "1.0.3",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -41,13 +41,14 @@
     "vitest": "^1.1.0",
     "jsdom": "^23.0.1"
   },
-  "main": "dist/react-simple-folder-tree.umd.js",
-  "module": "dist/react-simple-folder-tree.es.js",
+  "main": "dist/index.umd.js",
+  "module": "dist/index.es.js",
   "types": "dist/index.d.ts",
   "exports": {
     ".": {
       "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js"
+      "require": "./dist/index.umd.js",
+      "types": "./dist/index/d.ts"
     }
   },
   "files": [
