--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Mohammad Nazari",
   "license": "MIT",
   "private": false,
-  "version": "1.0.4",
+  "version": "1.0.5",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -41,13 +41,13 @@
     "vitest": "^1.1.0",
     "jsdom": "^23.0.1"
   },
-  "main": "./dist/index.umd.js",
-  "module": "./dist/index.es.js",
+  "module": "./dist/index.js",
+  "main": "./dist/index.umd.cjs",
   "types": "./dist/index.d.ts",
   "exports": {
     ".": {
-      "import": "./dist/index.es.js",
-      "require": "./dist/index.umd.js",
+      "import": "./dist/index.js",
+      "require": "./dist/index.umd.cjs",
       "types": "./dist/index/d.ts"
     }
   },
