--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,6 @@
     "declaration": true,
     "declarationDir": "types"
   },
-  "include": ["src"],
+  "include": ["src", "lib"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
