--- a/package.json
+++ b/package.json
@@ -14,32 +14,32 @@
   },
   "dependencies": {
     "classnames": "^2.3.2",
-    "iconsax-react": "^0.0.8",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-feather": "^2.0.10"
   },
   "devDependencies": {
     "@stefanracic/tailwind-child": "^1.0.5",
+    "@testing-library/dom": "^9.3.3",
+    "@testing-library/react": "^14.1.2",
     "@types/node": "^20.10.5",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/react-test-renderer": "^18.0.7",
     "@vitejs/plugin-react": "^3.1.0",
     "autoprefixer": "^10.4.14",
+    "c8": "^8.0.1",
+    "eslint": "^8.56.0",
+    "eslint-plugin-react": "^7.33.2",
+    "jsdom": "^23.0.1",
     "postcss": "^8.4.21",
+    "react-test-renderer": "^18.2.0",
     "tailwindcss": "^3.3.0",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-dts": "^3.7.0",
     "vite-plugin-lib-inject-css": "^1.3.0",
-    "@testing-library/dom": "^9.3.3",
-    "@testing-library/react": "^14.1.2",
-    "@types/react-test-renderer": "^18.0.7",
-    "c8": "^8.0.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react": "^7.33.2",
-    "react-test-renderer": "^18.2.0",
-    "vitest": "^1.1.0",
-    "jsdom": "^23.0.1"
+    "vitest": "^1.1.0"
   },
   "module": "./dist/index.js",
   "main": "./dist/index.umd.cjs",
